only use 1 parameter in body
